Fix background size on mobile devices.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,14 @@
 
 @import url(http://fonts.googleapis.com/css?family=Questrial);
 
+* {
+	-moz-font-feature-settings: "liga=1, dlig=1";
+    -ms-font-feature-settings: "liga", "dlig";
+    -webkit-font-feature-settings: "liga", "dlig";
+    -o-font-feature-settings: "liga", "dlig";
+    font-feature-settings: "liga", "dlig";
+}
+
 html {
     height: 100%;
 }
